change text of intro button on hover

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <section id="intro">
       <h1>Can you identify</h1>
       <em>Poison Ivy?</em>
-      <button>Start Quiz</button>
+      <button>
+        <span class="button-steady">Let's find out!</span>
+        <span class="button-hover">Start Quiz</span>
+      </button>
     </section>
 
     <section id="quiz">
