--- a/index.html
+++ b/index.html
@@ -20,17 +20,42 @@
   </head>
 
   <body>
+
+    <!-- ++++++ Introduction page ++++++ -->
+
     <section id="intro">
       <h1>Can you identify</h1>
-      <em>Poison Ivy?</em>
-      <button>
+      <h2>Poison Ivy?</h2>
+      <button id="start">
         <span class="button-steady">Let's find out!</span>
         <span class="button-hover">Start Quiz</span>
       </button>
     </section>
 
+    <!-- ++++++ Quiz ++++++ -->
+
     <section id="quiz">
+      <p class="title">Poison Ivy Quiz</p>
+      <div class="status">
+        <p class="question-count">Question 1 of 5</p>
+        <p class="score">Score: 0</p>
+      </div>
+
+      <div class="photos">
+        <img id="photo1" src=""></img>
+        <img id="photo2" src=""></img>
+      </div>
+
+      <div class="results">
+        You are correct!  Poison Ivy has leaves of 3..... lalalalalala
+      </div>
+
+      <div class="next">
+      </div>
     </section>
+
+    <!-- ++++++ Results ++++++ -->
+
   </body>
 
 </html>
