working on quiz page

--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
 
     <section id="quiz">
       <p class="title">Poison Ivy Quiz</p>
-      <div class="status">
-        <p class="question-count">Question 1 of 5</p>
-        <p class="score">Score: 0</p>
-      </div>
+      <p class="score">Score: 0</p>
+
+      <div class="question">Question 1 of 5: Which one is poison ivy?</div>
 
       <div class="photos">
-        <img id="photo1" src=""></img>
-        <img id="photo2" src=""></img>
+        <img id="photo1" src="images/test1.jpg"></img>
+        <img id="photo2" src="images/test2.jpg"></img>
       </div>
 
       <div class="results">
-        You are correct!  Poison Ivy has leaves of 3..... lalalalalala
+        Correct!  Poison Ivy has leaves of 3..... lalalalalala
       </div>
 
       <div class="next">
