styling changes; add next button; add right/wrong classes

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
       </div>
 
       <div class="results">
-        Correct!  Poison Ivy has leaves of 3..... lalalalalala
+        <p>Correct!  Poison Ivy has leaves of 3..... lalalalalala</p>
+        <button id="next">Next</button>
       </div>
 
-      <div class="next">
-      </div>
     </section>
 
     <!-- ++++++ Results ++++++ -->
