fix background in firefox; improve styling

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 
     <section id="quiz">
       <p class="title">Poison Ivy Quiz</p>
-      <p class="score">Score: 0</p>
+      <div class="stats">
+        <p class="question-count">Question: 1 of 5</p>
+        <p class="score">Score: 0</p>
+      </div>
 
-      <div class="question">Question 1 of 5: Which one is poison ivy?</div>
+      <div class="question">Which one is poison ivy?</div>
 
       <div class="photos">
         <img id="photo1" src="images/test1.jpg"></img>
