--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
     <!-- ++++++ Quiz ++++++ -->
 
     <section id="quiz">
-      <p class="title">Poison Ivy Quiz</p>
       <div class="stats">
         <p class="question-count">Question: 1 of 5</p>
         <p class="score">Score: 0</p>
       </div>
 
-      <div class="question">Which one is poison ivy?</div>
+      <div class="question"></div>
 
       <div class="photos">
-        <img id="photo1" src="images/test1.jpg"></img>
-        <img id="photo2" src="images/test2.jpg"></img>
+        <img id="photo1" src=""></img>
+        <img id="photo2" src=""></img>
       </div>
 
       <div class="results">
