added images... almost done...

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <section id="quiz">
       <div class="status">
         <p class="question-status">
-          Question: <span id="question-index"></span>
+          Question: <span class="question-index"></span>
                     of
-                    <span id="question-count"></span>
+                    <span class="question-count"></span>
         </p>
-        <p class="score-status">Score: <span id="score">0</span></p>
+        <p class="score-status">Score: <span class="score">0</span></p>
       </div>
 
       <div class="question"></div>
@@ -58,7 +58,14 @@
 
     </section>
 
-    <!-- ++++++ Results ++++++ -->
+    <!-- ++++++ Finish screen ++++++ -->
+
+    <section id="finish">
+      <h1>Poison Ivy Quiz</h1>
+      <p class="finish-score">Score: <span class="score"></span> out of <span class="question-count"></span></p>
+      <p class="score-text"></p>
+      <button id="again">Play Again</button>
+    </section>
 
   </body>
 
